# Computer-Interface

./: .gitignore  CMakeLists.txt  improved_flutter_command_handler.dart  partitions.csv
main/: CMakeLists.txt  main.c
main/motors/: main_backup.c  motor_control.c  mpu.c
